hard-gists/6309113/run.log
=== Docker Run Log for 6309113 ===
Started at: Mi 29. Okt 16:27:57 CET 2025

[2025-10-29 16:27:58] START: Running container for 6309113
[2025-10-29 16:27:58] SUCCESS: Container 7937e624bfb1a6f2889599d9dae7789c2beb3f3a6673b9e5be9d4105dd9f8bc9 started for 6309113
=== Container logs for 6309113 ===
  File "/snippet.py", line 19
    print "Max x: " + str(numpy.max(score_x)) + " y: " + str(numpy.max(score_y))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6309113 ===
[2025-10-29 16:28:00] INFO: Container 7937e624bfb1a6f2889599d9dae7789c2beb3f3a6673b9e5be9d4105dd9f8bc9 has stopped
